# video_translation_demo

./: .gitmodules  README.md  app.js  index.html  pyproject.toml
translation/: manifest.json
translation/videos/L2.1.HAIM_Holistic_AI_for_Medicine/advanced/: L2.1.HAIM_Holistic_AI_for_Medicine__output_es_advanced.srt  L2.1.HAIM_Holistic_AI_for_Medicine__output_id_advanced.srt  L2.1.HAIM_Holistic_AI_for_Medicine__output_kr_advanced.srt  L2.1.HAIM_Holistic_AI_for_Medicine__output_tr_advanced.srt
translation/videos/L2.1.HAIM_Holistic_AI_for_Medicine/deep-l/: L2.1.HAIM_Holistic_AI_for_Medicine-output-deepl-ar.srt  L2.1.HAIM_Holistic_AI_for_Medicine-output-deepl-de.srt  L2.1.HAIM_Holistic_AI_for_Medicine-output-deepl-el.srt  L2.1.HAIM_Holistic_AI_for_Medicine-output-deepl-es.srt  L2.1.HAIM_Holistic_AI_for_Medicine-output-deepl-fr.srt  L2.1.HAIM_Holistic_AI_for_Medicine-output-deepl-id.srt  L2.1.HAIM_Holistic_AI_for_Medicine-output-deepl-ja.srt  L2.1.HAIM_Holistic_AI_for_Medicine-output-deepl-kr.srt  L2.1.HAIM_Holistic_AI_for_Medicine-output-deepl-pt.srt  L2.1.HAIM_Holistic_AI_for_Medicine-output-deepl-ru.srt  L2.1.HAIM_Holistic_AI_for_Medicine-output-deepl-sq.srt  L2.1.HAIM_Holistic_AI_for_Medicine-output-deepl-tr.srt  L2.1.HAIM_Holistic_AI_for_Medicine-output-deepl-uk.srt  L2.1.HAIM_Holistic_AI_for_Medicine-output-deepl-zh.srt
translation/videos/L2.1.HAIM_Holistic_AI_for_Medicine/gemini/: L2.1.HAIM_Holistic_AI_for_Medicine__output_ar_gemini.srt  (+13 more)
translation/videos/L3.2.SpreadsPercentilesVisualization/: L3.2.Spreads_Percentiles_Visualization-en.srt  youtube_id.txt
(+175 files in other folders)
