[project]
name = "video-translation-demo"
version = "0.1.0"
description = "MIT Video Translation Viewer - A tool for viewing course videos with multi-language subtitle support"
readme = "README.md"
requires-python = ">=3.13,<4.0"
authors = [
    { name = "MIT Video Translation Team" }
]

dependencies = [
    # Add your dependencies here
    "openai (>=2.8.1,<3.0.0)",
    "python-dotenv>=1.0.0",
    "mistralai (>=1.9.11,<2.0.0)",
    "sarvamai (>=0.1.21,<0.2.0)",
    "google-genai>=0.3.0",
    "deepl>=1.16.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
